Changelog for GEMC
==================

7/28/16
 - added attributes modifier for cad imports:
   - position
   - rotation
 - added CAD and GDML reading of hit definitions
 - protecting against a too low production threshold
 - assigning system to sensitivity so hit definitions can be read properly
 - bug fix: assigning a non empty identifier if SDID cannot be loaded from hit definitions
 - bug fix: existence was not properly managed in run condition. Added bool var to handle cases
   where existence is set in the gcard

7/27/16
 - added possibility of import all CAD files from a directory
 - changed log verbosity for both CAD and GDML 
 - modified github README
 - detector run condition existance set to 0 by default - or non existing volumes will appear

7/22/16
 - fixed CATCH option for detector factory
 - for cad model, reading cad.gxml for new volume attributes
 - added obj format to CAD support

7/21/16
 - finalized CAD factory
 - added check on file existence for GDML factory

7/20/16
 - added CAD factory - work in progress
 - fixed gdml factory: deleting world pointer after use

7/19/16
 - added comments for future detector mlibrary
 - added material handling in GDML import
 - added GDML import. This is done in two steps:
   1. fill gemc detector map
   2. build the actual volumes
 - added handling of color, visual attributes.
 - added handling of sensitivity
 - handling first daughter so they're seen by the gemc tree

7/18/16
 - fixed NO_FIELD option for individual fields
 - added volume name when material is not found

7/15/16
 - removed gdml material factory. Adding gemc gdml extension "gxml".
 - starting to import gdml files with native G4GDMLParser

7/14/16
 - added additional overlap check line_test if CHECK_OVERLAPS > 3

7/13/16
 - added translation table mechanism from mlibrary: translationTable
 - development version tag: 2.5
 - removed unnecessary randomize function from runWeights

7/7/16